# game-relay

./: .gitignore  Dockerfile  Dockerfile.oracle  Project.md  README.md  config.py  deploy-gh.sh  deploy-hf.sh  game.py  main.py  pyproject.toml
docs/: Relay.md
game-demo/: icon.svg.import  project.godot
game-demo/docs/: GodotDemo.md  RelayLibrary.md
game-demo/scenes/: Main.tscn
game-demo/scripts/: game.gd  game.gd.uid
game-demo/scripts/ai/: ai_player.gd  ai_player.gd.uid
game-demo/scripts/relay/: relay_client.gd  relay_client.gd.uid  relay_host.gd  relay_host.gd.uid
game-demo/scripts/session/: client_session.gd  client_session.gd.uid  host_session.gd  host_session.gd.uid  local_session.gd  local_session.gd.uid  session.gd  session.gd.uid
relay-client-demo/: deploy.sh  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
relay-client-demo/src/: App.tsx  GameScreen.tsx  LobbyScreen.tsx
relay-client-demo/src/game/: binaryCodec.ts  game.ts  manager.ts  player.ts  renderer.ts  state.ts
relay-client-demo/src/hooks/: useGameSession.ts  useKeyToggle.ts  useRenderLoop.ts
relay-client-ts/: README.md  package-lock.json  package.json  tsconfig.json
relay-client-ts/src/: client.ts  host.ts  index.ts
relay-server/: Dockerfile  connect.sh  game.py  main.py  servers.json
relay-server/docs/: Relay.md
